--- a/client/views/index.html
+++ b/client/views/index.html
@@ -14,6 +14,7 @@
             <td>Division</td>
             <td>In game</td>
             <td>Last checked</td>
+            <td>Actions</td>
             <td>Username</td>
             <td>Password</td>
         </thead>
